--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" sizes="32x32" href="../public/images/favicon-32x32.png" />
     <meta name="auto-scope" content="./css/user-card.css" />
     <link rel="stylesheet" href="./css/page.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -20,12 +26,12 @@
 
       <section class="stats">
         <dl class="list">
-          <dt class="term">Followers</dt>
-          <dd class="value">80k</dd>
-          <dt class="term">Likes</dt>
-          <dd class="value">803k</dd>
-          <dt class="term">Photos</dt>
-          <dd class="value">1.4k</dd>
+          <dt class="followers-label mg-pd-0">Followers</dt>
+          <dd class="followers-value mg-pd-0">80k</dd>
+          <dt class="likes-label mg-pd-0">Likes</dt>
+          <dd class="likes-value mg-pd-0">803k</dd>
+          <dt class="photos-label mg-pd-0">Photos</dt>
+          <dd class="photos-value mg-pd-0">1.4k</dd>
         </dl>
       </section>
     </article>
